--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm-naming-strategies": "^4.1.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "yaml": "^2.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
